--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/astlecha/bambazon-app#readme",
   "dependencies": {
+    "console.table": "^0.8.0",
     "inquirer": "^3.2.0",
     "mysql": "^2.13.0"
   }
